@@ -39,7 +39,7 @@ class JCacheController
 	public function __construct($options)
 	{
 		$this->cache 	= new JCache($options);
-		$this->options 	= $this->cache->_options;
+		$this->options 	= & $this->cache->_options;
 
 		// Overwrite default options with given options
 		foreach ($options AS $option=>$value) {
@@ -95,9 +95,8 @@ class JCacheController
 	 * @since	1.6
 	 */
 	public function setCaching($enabled)
-	{
-		$this->options['caching'] = (bool) $enabled;
-		$this->cache->setCaching($enabled);
+	{	
+		$this->cache->setCaching($enabled);	
 	}
 
 	/**
